all changes of attacker distribution include code

--- a/Integrating_continuous_credentials.tex
+++ b/Integrating_continuous_credentials.tex
@@ -50,6 +50,16 @@ A wallet $w$ is comprised of a set of credentials $\{c_1, c_2, \ldots, c_n\}$ cl
 
 Denoted $S$, i.e., $\{c_1, c_2, \ldots, c_n\} \in S = \{ \text{safe}, \text{loss}, \text{leak}, \text{theft} \}$ the state of each credential. A scenario $\sigma$ is defined as a vector of states of each credential in the wallet. Denote $\sigma_i$ the state of credential $c_i$ in scenario $\sigma$. An availability vector represents the availablity of all credentials to a user $U$ or an attacker $A$. Denote by $\sigma^U$,$\sigma^A$ the availability vector of the user and the attacker respectively.
 
+In the following sections we will represent all continuously distributed credentials as the probability function of the matching score $s$ denoted as $P_U[s]$. We follow the definitions given by Jain et al.~\cite{anil2004} and generalize it to all continuously distributed credentials. If the stored reference template of the user $U$ is represented by $X_U$ and the acquired input for recognition is represented by $X_Q$ then:
+
+$H_0$ input $X_Q$ does not come from the same person as the reference template $X_U$.
+
+$H_1$ input $X_Q$ comes from the same person as the reference template $X_U$.
+
+$D_O$, $D_1$ are the imposter and geniuine persons trying to authenticate into the account.
+The matching score $s$, is usually a single number, that quantifies the similarity between an input $X_Q$ and and the reference store template in the database $X_U$~\cite{prabhakar2003}. If the matching score $s(X_Q,X_U)$ is above a predetermined threshold $t$ then decide $D_1$ else, decide $D_0$.
+
+
 \subsection{Single Credential}
 For a wallet $w$ comprised of a single credential $c_1$, $w^\text{single}(c_1)=c_1$ we have built $\mathrm{FAR}$ vs $\mathrm{FRR}$ curves for Uniform, Parabolic and Gaussian probabilistic distribution functions and defined each one of the states as follows:
 
@@ -89,31 +99,31 @@ Where $u_1, u_2$ are the user PDFs' bounds and $a_1, a_2$ are the attacker PDFs'
     \caption{Symmetric and Asymmetric Uniform PDFs}
 \end{figure}
 
-Without loss of generality, we assume that $u_1 < a_1$ and $u_2 < a_2$. Furthemore, we assume there is an overlaping region between the distributions; otherwise the scenario reduces to a trivial case. We also assume that the user and attacker PDFs are do not fully contain one another, as such cases would render them non-separable. Figure 1a illustrates the case where the user and attacker PDF's are symmetric, while Figure 1b illustrates asymmetric PDFs.
-The probability of success for a single credential wallet is defined as:
-\[
+We assume that $a_1 < u_1$ and $a_2 < u_2$ as the x axis represents the matching score $s$ and higher values of $s$ corresponds to the user $D_1$ as mentioned in the model details. Furthemore, we assume there is an overlaping region between the distributions; otherwise the scenario reduces to a trivial case. We also assume that the user and attacker PDFs are do not fully contain one another, as such cases would render them non-separable. Figure 1a illustrates the case where the user and attacker PDF's are symmetric, while Figure 1b illustrates asymmetric PDFs both as function of the matching score $s$.
+The probability of success for a single credential wallet is defined as: 
+\[ 
 P_{\text{success}}(w^{\text{single}}) = P_{{\text{safe}}} = 1-\mathrm{P_{\text{loss}}}-\mathrm{P_{\text{leak}}}-\mathrm{P_{\text{theft}}}=1-\mathrm{FRR} - \mathrm{FAR} + \mathrm{FRR} \cdot \mathrm{FAR}
 \]
 
 Let $T$ denote the threshold. Then the False Acceptance Rate (FAR) and False Rejection Rate (FRR) are defined as:
 \[
-\text{FAR}(T) = \int_{a_1}^{T} \frac{1}{a_2-a_1} dt =
+\text{FAR}(T) = \int_{T}^{a_2} \frac{1}{a_2-a_1} ds =
 \left\{
 \begin{array}{ll}
-0 & \text{if } T \le a_1 \\
-\frac{T-a_2}{a_2 - a_1} & \text{if } a_1 < T \le a_2 \\
-1 & \text{if } T > a_2
+1 & \text{if } T \le a_1 \\
+\frac{a_2 - T}{a_2 - a_1} & \text{if } a_1 < T \le a_2 \\
+0 & \text{if } T > a_2
 \end{array}
 \right.
 \]
 
 \[
-\text{FRR}(T) = \int_{T}^{u_2} \frac{1}{u_2-u_1} dt =
+\text{FRR}(T) = \int_{u_1}^{T} \frac{1}{u_2-u_1} ds =
 \left\{
 \begin{array}{ll}
-1 & \text{if } T \le u_1 \\
-\frac{u_2-T}{u_2 - u_1} & \text{if } u_1 < T \le u_2 \\
-0 & \text{if } T > u_2
+0 & \text{if } T \le u_1 \\
+\frac{T - u_1}{u_2 - u_1} & \text{if } u_1 < T \le u_2 \\
+1 & \text{if } T > u_2
 \end{array}
 \right.
 \]
@@ -123,37 +133,41 @@ We defined the probability of success as a function of the threshold $T$ by sett
 P_{\text{success}}(T) = 
 \left\{
 \begin{array}{ll}
-    0 & \text{if } T \le u_1 \\
-    1 - \frac{u_2-T}{u_2-u_1} & \text{if } u_1 < T \le u_1 \\
-    1 - \frac{T-a_1}{a_2-a_1} - \frac{u_2-T}{u_2-u_1} + \frac{(T-a_1)(u_2-T)}{(a_2-a_1)(u_2-u_1)} & \text{if } a_1 < T \le u_2 \\
-    1 - \frac{T-a_1}{a_2-a_1} & \text{if } u_2 < T \le a_2 \\
-    0 & \text{if } T > a_2
+    0 & \text{if } T \le a_1 \\
+    \\
+    1 - \frac{a_2-T}{a_2 - a_1} & \text{if } a_1 < T \le u_1 \\
+    \\
+    1 - \frac{T - u_1}{u_2 - u_1} - \frac{a_2 - T}{a_2 - a_1} + \frac{T-u_1}{u_2 - u_1}\cdot\frac{a_2 - T}{a_2 - a_1} & \text{if } u_1 < T \le a_2 \\
+    \\
+    1 - \frac{T - u_1}{u_2 - u_1} & \text{if } a_2 < T \le u_2 \\
+    \\
+    0 & \text{if } T > u_2
     \end{array}
 \right.
 \]
 
-$P_{\text{success}}(T)$ is a continuous function in $[u_1,a_2]$ ,differentiable in $(u_1,a_2)$ and maintains 
+$P_{\text{success}}(T)$ is a continuous function in $[a_1,u_2]$ ,differentiable in $(a_1,u_2)$ and maintains 
 
-$P_{\text{success}}(u_1) = P_{\text{success}}(a_2)$ thus by Rolle's Theorem, there exists at least one point in $(u_1,a_2)$ such that:
+$P_{\text{success}}(a_1) = P_{\text{success}}(u_2)$ thus by Rolle's Theorem, there exists at least one point in $(a_1,u_2)$ such that:
 \[\frac{d}{dT} P_{\text{success}}(T) = 0.\] 
 
 The horizontal tangent point is:
 
 \[
-T = \frac{a_2+u_1}{2} \quad \text{for } a_1 \leq T \leq u_2
+T = \frac{a_1+u_2}{2} \quad \text{for } u_1 \leq T \leq a_2
 \]
 
-\[\frac{d}{dt} P_{\text{success}}(T) > 0 \text{, For every } T \in (u_1, \frac{a_2+u_1}{2}) \]
+\[\frac{d}{dt} P_{\text{success}}(T) > 0 \text{, For every } T \in (u_1, \frac{a_1+u_2}{2}) \]
 
-\[\frac{d}{dt} P_{\text{success}}(T) < 0 \text{, For every } T \in (\frac{a_2+u_1}{2}, a_2) \]
+\[\frac{d}{dt} P_{\text{success}}(T) < 0 \text{, For every } T \in (\frac{a_1+u_2}{2}, a_2) \]
 
-Thus, by the First Derivative Test the maximum point is at $T = \frac{a_2+u_1}{2}$.
+Thus, by the First Derivative Test the maximum point is at $T = \frac{a_1 + u_2}{2}$.
 \[
-P_{\text{success}}(T_{\text{opt}}) = \frac{(a_2 - u_1)^2}{4(u_2 - u_1) \cdot(a_2 - a_1)} 
+P_{\text{success}}(T_{\text{opt}}) = \frac{(a_1 - u_2)^2}{4 (a_1 - a_2) (u_1 - u_2)}
 \]
 We calculated the EER point and showed it is not equal to the optimal point:
 \[
-T_{\text{EER}} = \frac{a_1 \cdot u_1 - a_2 \cdot u_2}{u_2 - u_1 + a_2 - a_1} \neq \frac{a_2 + u_1}{2}
+T_{\text{EER}} = \frac{a_1 \cdot u_1 - a_2 \cdot u_2}{a_1 - a_2 + u_1 - u_2} \neq \frac{a_1 + u_2}{2}
 \] 
 The maximum point represnents the optimal threshold of the wallet. By selecting the threshold value, we influnce the wallet's security sensetivity by adjusting the probability associated with each state in $S$. The optimal point indicates that increasing the offset between the two uniform distributions is likely to improve the wallet's success. This optimal point suggest an asymmetry between the user’s and the attacker’s distribution intervals.. Figure 2 illustrates the probability of success for a single credential wallet depends on the threshold $T$. 
 
@@ -164,8 +178,9 @@ The maximum point represnents the optimal threshold of the wallet. By selecting 
 \end{figure}
 
 We can define the FAR and FRR at the optimal point as follows:
-\[\text{FAR}(T_{\text{opt}}) = \frac{\frac{a_2}{2}+\frac{u_1}{2}-a_1}{a_2-a_1}\]
-\[\text{FRR}(T_{\text{opt}}) = \frac{u_2-\frac{a_2}{2}-\frac{u_1}{2}}{u_2-u_1}\]
+\[\text{FAR}(T_{\text{opt}}) = \frac{2a_2 - a_1 - u_2}{2(a_2 - a_1)}\]
+
+\[\text{FRR}(T_{\text{opt}}) = \frac{a_1 + u_2 - 2u_1}{2(u_2 - u_1)}\]
 Figure 3 illustrated the FAR vs FRR curve.
 \begin{figure}[H]
     \centering
@@ -177,31 +192,31 @@ Figure 3 illustrated the FAR vs FRR curve.
 %%%
 %%%
 %%%
-Our goal is to model credentials whose distributions closely resemble those observed in real measurement data. To this end, we analyze a parabolic probability distribution function, which provides a flexible approximation of credential distributions that are often near-Gaussian. This choice is also consistent with the findings of Slobodan et al.\ on Eigenfinger and Eigenpalm feature distributions~\cite{Slob2005}. Accordingly, we define two probability density functions (PDFs) for the user and the attacker, denoted by $P_U$ and $P_A$, respectively.
+Our goal is to model credentials whose distributions closely resemble those observed in real measurement data. To this end, we analyze a parabolic probability distribution function, which provides a flexible approximation of credential distributions that are often near-Gaussian. This choice is also consistent with the findings of Slobodan et al. on Eigenfinger and Eigenpalm feature distributions~\cite{Slob2005}. Accordingly, we define two probability density functions (PDFs) for the user and the attacker, denoted by $P_U$ and $P_A$, respectively.
 \[
-P_U(x) = 
+P_U(s) = 
 \left\{
 \begin{array}{ll}
-    a \cdot x^2+b \cdot x+c & \alpha_1 \leq x \leq \alpha_2 \\
-    0 & x > \alpha_2 \lor x < \alpha_1
+    a \cdot s^2+b \cdot s+c & \alpha_1 \leq s \leq \alpha_2 \\
+    0 & s > \alpha_2 \lor s < \alpha_1
     \end{array}
 \right.
 \]
 \[
-P_A(x) =
+P_A(s) =
 \left\{
 \begin{array}{ll}
-    d \cdot x^2+e \cdot x+f & \beta_1 \leq x \leq \beta_2 \\
-    0 & x > \beta_2 \lor x < \beta_1
+    d \cdot s^2+e \cdot s+f & \beta_1 \leq s \leq \beta_2 \\
+    0 & s > \beta_2 \lor s < \beta_1
     \end{array}
 \right.
 \]
 
 Here, $a, b, c$ and $d, e, f$ denote the parabolic coefficients of the user and attacker distributions, respectively. The parameters $\alpha_{1}, \alpha_{2}$ are the roots of the user's PDF, while $\beta_{1}, \beta_{2}$ are the roots of the attacker's PDF. 
-If $\alpha_{2} < \beta_{1}$, the two distributions do not overlap, and the problem becomes trivial. Conversely, if $\alpha_{1} > \beta_{1}$ and $\beta_{2} < \alpha_{2}$, the attacker's distribution is fully contained within the user's, resulting in a non-separable scenario. 
-Without loss of generality, we therefore focus on the intermediate and most meaningful configuration, where
+Similarly, to the analysis of the uniform distribution, the x axis represents the matching score, such that higher values of score will be corrspondant to the reference template stored in the database $X_U$. If $\beta_{2} < \alpha_{1}$, the two distributions do not overlap, and the problem becomes trivial. Conversely, if $\alpha_{1} > \beta_{1}$ and $\beta_{2} < \alpha_{2}$, the attacker's distribution is fully contained within the user's, resulting in a non-separable scenario. 
+We therefore focus on the intermediate and most meaningful configuration, where
 \[
-    \alpha_{1} \le \beta_{1} \le \alpha_{2} \le \beta_{2},
+    \beta_{1} \le \alpha_{1} \le \beta_{2} \le \alpha_{2},
 \]
 as illustrated in Figure~4.
 
@@ -231,16 +246,16 @@ To reduce the degrees of freedom of the parabolic functions while maintaining a 
 \]
 Therefore, we can write the parabolic PDFs as:
 \[
-P_U(x) =
+P_U(s) =
 \left\{
 \begin{array}{ll}
-     \frac{6}{(\alpha_1 - \alpha_2)^2} \cdot x^2 - \frac{6 \cdot (\alpha_1 + \alpha_2)}{(\alpha_1 - \alpha_2)^3} \cdot x + \frac{6 \cdot \alpha_1 \cdot \alpha_2}{(\alpha_1 - \alpha_2)^3} & \alpha_1 \leq x \leq \alpha_2 \\
+     \frac{6}{(\alpha_1 - \alpha_2)^2} \cdot s^2 - \frac{6 \cdot (\alpha_1 + \alpha_2)}{(\alpha_1 - \alpha_2)^3} \cdot x + \frac{6 \cdot \alpha_1 \cdot \alpha_2}{(\alpha_1 - \alpha_2)^3} & \alpha_1 \leq x \leq \alpha_2 \\
     0 & x > \alpha_2 \lor x < \alpha_1
     \end{array}
 \right.
 \]
 \[
-P_A(x) =
+P_A(s) =
 \left\{
 \begin{array}{ll}
      \frac{6}{(\beta_1 - \beta_2)^2} \cdot x^2 - \frac{6 \cdot (\beta_1 + \beta_2)}{(\beta_1 - \beta_2)^3} \cdot x + \frac{6 \cdot \beta_1 \cdot \beta_2}{(\beta_1 - \beta_2)^3} & \beta_1 \leq x \leq \beta_2 \\
@@ -250,40 +265,40 @@ P_A(x) =
 \]
 
 We will find FAR and FRR as a function of the threshold $T$ and define the probability of success based on the single credential wallet as shown in section 3.2:
-\[\text{FAR}(T) = \int_{\beta_1}^{T} P_A(x) dx =
+\[\text{FAR}(T) = \int_{T}^{\beta_2} P_A(s) ds =
 \left\{
 \begin{array}{ll}
 0 & T \le \beta_1 \\
-\frac{6 \left(\frac{T^3}{3}-\frac{\beta_1^3}{3}\right)}{(\beta_1-\beta_2)^3} -\frac{6 \left(\frac{T^2}{2}-\frac{\beta_1^2}{2}\right) (\beta_1+\beta_2)}{(\beta_1-\beta_2)^3}+\frac{6 \beta_1 \beta_2 (T-\beta_1)}{(\beta_1-\beta_2)^3} & \beta_1 < T \le \beta_2 \\
+\frac{6 \left(\frac{\beta_2^3}{3}-\frac{T^3}{3}\right)}{(\beta_1-\beta_2)^3}-\frac{6 \left(\frac{\beta_2^2}{2}-\frac{T^2}{2}\right) (\beta_1+\beta_2)}{(\beta_1-\beta_2)^3}+\frac{6 \beta_1 \beta_2 (\beta_2-T)}{(\beta_1-\beta_2)^3} & \beta_1 < T \le \beta_2 \\
 1 & T > \beta_2
 \end{array}
 \right.
 \]
-\[\text{FRR}(T) = \int_{T}^{\alpha_2} P_U(x) dx =
+\[\text{FRR}(T) = \int_{\alpha_1}^{T} P_U(s) ds =
 \left\{
 \begin{array}{ll}
 1 & T \le \alpha_1 \\
-\frac{6 \left(\frac{\alpha_2^3}{3}-\frac{T^3}{3}\right)}{(\alpha_1-\alpha_2)^3}-\frac{6 \left(\frac{\alpha_2^2}{2}-\frac{T^2}{2}\right) (\alpha_1+\alpha_2)}{(\alpha_1-\alpha_2)^3}+\frac{6 \alpha_1 \alpha_2 (\alpha_2-T)}{(\alpha_1-\alpha_2)^3}& \alpha_1 < T \le \alpha_2 \\
+\frac{6 \left(\frac{T^3}{3}-\frac{\alpha_1^3}{3}\right)}{(\alpha_1-\alpha_2)^3}-\frac{6 \left(\frac{T^2}{2}-\frac{\alpha_1^2}{2}\right) (\alpha_1+\alpha_2)}{(\alpha_1-\alpha_2)^3}+\frac{6 \alpha_1 \alpha_2 (T-\alpha_1)}{(\alpha_1-\alpha_2)^3} & \alpha_1 < T \le \alpha_2 \\
 0 & T > \alpha_2
 \end{array}
 \right.
 \]
+\\
 \[P_{{\text{success}}} =
 \left\{
 \begin{array}{cc}
 \ &
 \begin{array}{cc}
-0 & T < \alpha_1 \lor T > \beta_2 \\
+0 & T < \beta_1 \lor T > \alpha_2 \\
 \\
-\frac{(T-\alpha_1)^2\,(2T+\alpha_1-3\alpha_2)}{(\alpha_1-\alpha_2)^3} 
-&  \alpha_1 \le T \le \beta_1 \\
+\frac{(T-\beta_1)^2 (2 T+\beta_1-3 \beta_2)}{(\beta_1-\beta_2)^3} 
+&  \beta_1 \le T \le \alpha_1 \\
 \\
--\frac{(T-\alpha_1)^2\,(T-\beta_2)^2\,(2T+\alpha_1-3\alpha_2)\,(2T-3\beta_1+\beta_2)}
-{(\alpha_1-\alpha_2)^3\,(\beta_1-\beta_2)^3}
-& \beta_1 \le T \le \alpha_2 \\
+-\frac{(T-\alpha_2)^2 (T-\beta_1)^2 (2 T-3 \alpha_1+\alpha_2) (2 T+\beta_1-3 \beta_2)}{(\alpha_1-\alpha_2)^3 (\beta_1-\beta_2)^3}
+& \alpha_1 \le T \le \beta_2 \\
 \\
--\frac{(T-\beta_2)^2\,(2T-3\beta_1+\beta_2)}{(\beta_1-\beta_2)^3} 
-& \alpha_2 \le T \le \beta_2  \\
+-\frac{(T-\alpha_2)^2 (2 T-3 \alpha_1+\alpha_2)}{(\alpha_1-\alpha_2)^3}
+& \beta_2 \le T \le \alpha_2  \\
 \end{array}
 \end{array}
 \right.
@@ -294,18 +309,11 @@ Before writing the piecewise derivative, we define the polynomial coefficients:
 \[
 \begin{aligned}
 q &= 4, \\[6pt]
-m &= -\alpha_{1} - 5\alpha_{2} - 5\beta_{1} - \beta_{2}, \\[6pt]
-n &= -\alpha_{1}^{2}
-     + 3\alpha_{1}\alpha_{2}
-     + \alpha_{1}\beta_{1}
-     + 6\alpha_{2}\beta_{1}
-     + \alpha_{2}\beta_{2}
-     + 3\beta_{1}\beta_{2}
-     - \beta_{2}^{2}, \\[6pt]
-s &= \alpha_{1}^{2}\beta_{1}
-     - 3\alpha_{1}\alpha_{2}\beta_{1}
-     - 3\alpha_{2}\beta_{1}\beta_{2}
-     + \alpha_{2}\beta_{2}^{2}.
+m &= -(5\alpha_1 + \alpha_2 + \beta_1 + 5\beta_2), \\[6pt]
+n &= \alpha_1(3\alpha_2 + \beta_1 + 6\beta_2)
+    - \alpha_2^2 + \alpha_2\beta_2 - \beta_1^2 + 3\beta_1\beta_2, \\[6pt]
+\ell &= \alpha_1\bigl(\beta_1^2 - 3\beta_2(\alpha_2 + \beta_1)\bigr)
+       + \alpha_2^2 \beta_2.
 \end{aligned}
 \]
 
@@ -313,33 +321,32 @@ With these coefficients, the derivative of $P_{\text{success}}(T)$ is given by t
 \[
 \frac{dP_{\text{success}}}{dT} =
 \begin{cases}
-0, & T < \alpha_1 \;\lor\; T > \beta_2, \\[6pt]
+0, & T < \beta_1 \;\lor\; T > \alpha_2, \\[6pt]
 
 \displaystyle
-\frac{6 (T-\alpha_1)(T-\alpha_2)}{(\alpha_1-\alpha_2)^3},
-& \alpha_1 \le T \le \beta_1, \\[12pt]
+\frac{6 (T-\beta_1) (T-\beta_2)}{(\beta_1-\beta_2)^3},
+& \beta_1 \le T \le \alpha_1, \\[12pt]
 
 \displaystyle
--\frac{6 (T-\alpha_1)(T-\beta_2)}{(\alpha_1-\alpha_2)^3(\beta_1-\beta_2)^3}
-\bigl(qT^3 + mT^2 + nT + s\bigr),
-& \beta_1 \le T \le \alpha_2, \\[12pt]
+-\frac{6 (T-\alpha_2)(T-\beta_1)\bigl(qT^3 + mT^2 + nT + \ell\bigr)}
+     {(\alpha_1-\alpha_2)^3 (\beta_1-\beta_2)^3},
+& \alpha_1 \le T \le \beta_2, \\[12pt]
 
 \displaystyle
--\frac{6 (T-\beta_1)(T-\beta_2)}{(\beta_1-\beta_2)^3},
-& \alpha_2 \le T \le \beta_2.
+-\frac{6 (T-\alpha_1) (T-\alpha_2)}{(\alpha_1-\alpha_2)^3},
+& \beta_2 \le T \le \alpha_2.
 \end{cases}
 \]
 
-In the second interval, the derivative has a single critical point at $T=\alpha_{1}$. Since the derivative is strictly positive for all $T>\alpha_{1}$, this point corresponds to a local minimum rather than a maximum. Similarly, in the fourth interval, the only critical point occurs at $T=\beta_{2}$, and the derivative is strictly negative for all $T<\beta_{2}$. Therefore, this interval also contains no maximum either.
+In the second interval, the derivative has a single critical point at $T=\beta_{1}$. Since the derivative is strictly positive for all $T>\beta_{1}$, this point corresponds to a local minimum rather than a maximum. Similarly, in the fourth interval, the only critical point occurs at $T=\alpha_{2}$, and the derivative is strictly negative for all $T<\alpha_{2}$. Therefore, this interval also contains no maximum either.
 
-We therefore turn to the third interval. In this region, the derivative is the product of a cubic polynomial and two linear factors. The linear factors vanish at $T=\alpha_{1}$ and $T=\beta_{2}$, both of which lie outside the third interval. Consequently, the existence of critical points within this interval depends solely on the cubic term. Solving this cubic ,reveals exactly one real root with the remaining two roots being complex. The closed form of the cubic solution can not be simplified further more than a complex expression. Thus, we denote the solution as $T_{\text{cubic}}$.
+We therefore turn to the third interval. In this region, the derivative is the product of a cubic polynomial and two linear factors. The linear factors vanish at $T=\beta_{1}$ and $T=\alpha_{2}$, both of which lie outside the third interval. Consequently, the existence of critical points within this interval depends solely on the cubic term. Solving this cubic ,reveals exactly one real root with the remaining two roots being complex. The closed form of the cubic solution can not be simplified further more than a complex expression. Thus, we denote the solution as $T_{\text{cubic}}$.
 
 By examining the sign of the derivative on both sides of the critical point $T_{\text{cubic}}$, we verify that it constitutes a global maximum of $P_{\text{safe}}(T)$. We denote this maximizing point by $T_{\text{opt}}$.
 
 To demonstrate that this optimal threshold differs from the Equal Error Rate (EER) threshold, we computed the EER point separately as follows:
 
-\[T_{\text{EER}} = \frac{\alpha_{1}\,\beta_{1} - \alpha_{2}\,\beta_{2}}
-           {\alpha_{1} - \alpha_{2} + \beta_{1} - \beta_{2}} \neq T_{\text{opt}}
+\[T_{\text{EER}} = \frac{\alpha_1 \beta_1 - \alpha_2 \beta_2}{\alpha_1 - \alpha_2 + \beta_1 - \beta_2} \neq T_{\text{opt}}
 \]
 
 We illustrate several user and attacker distributions and present their corresponding probability of success curves, expressed as functions of the threshold $T$ in Figure 5 and Figure 6 respectively.
@@ -361,12 +368,12 @@ Moreover, we illustrate the FAR–FRR curves for each pair of user and attacker 
     \caption{FAR vs FRR curve parabolic distributed}
 \end{figure}
 
-To quantify the effect of the variance on the deviation between the optimal operating point $T_{\text{opt}}$ and the equal error rate (EER) point $T_{\text{EER}}$, we numerically computed this gap as a function of the overlap area between the user and attacker PDFs. Increasing the overlap area between the distributions, achieved by reducing the distance between their roots, corresponds to lower variance and reduced separability between the two distributions. The simulations reveal that as the variance increases, the gap $\lvert T_{\text{opt}} - T_{\text{EER}} \rvert$ grows accordingly, until the operating threshold moves into a regime where it effectively minimizes only one of the error rates, either FAR or FRR, driving the other to zero. This phenomenon is shown in Figure~8. These findings indicate that higher attacker variance enlarges the potential security advantage gained by operating at $T_{\text{opt}}$ rather than at the EER point.
+To quantify the effect of the variance on the deviation between the optimal operating point $T_{\text{opt}}$ and the equal error rate (EER) point $T_{\text{EER}}$, we numerically computed this gap as a function of the attacker's variance. Decreasing the variance of the attacker achieved by reducing the distance between its roots, corresponds to reduced separability between the two distributions. The simulations reveal that as the variance increases, the gap $\lvert T_{\text{opt}} - T_{\text{EER}} \rvert$ grows accordingly, until the operating threshold moves into a regime where it effectively minimizes only one of the error rates, either FAR or FRR, driving the other to zero. This phenomenon is shown in Figure~8. These findings indicate that higher attacker variance enlarges the potential security advantage gained by operating at $T_{\text{opt}}$ rather than at the EER point.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{fig_gap_vs_overlap.pdf}
-    \caption{Gap between optimal point and EER point vs overlapping area parabolic distributed}
+    \includegraphics[width=0.75\textwidth]{fig_gap_vs_variance_parabola.pdf}
+    \caption{Gap between optimal point and EER point vs Variance of the attacker parabolic distributed}
 \end{figure}
 \subsection{Two Credentials}
 For a wallet $w$ comprised of two independently and identically distributed credentials, derived from either the same or different PDF’s, we defined the integrated system success as the probability of users successfully defend their wallets under two scenarios:
@@ -430,6 +437,11 @@ Cryptology ePrint Archive, Paper 2021/1522,2021. https://eprint.iacr.org/2021/15
 Slobodan Ribaric and Ivan Fratric.\\
 \textit{A Biometric Identification System Based on Eigenpalm and Eigenfinger Features}.\\
 IEEE Transactions on Pattern Analysis and Machine Intelligence, Volume: 27, Issue: 11, November 2005.
+
+\bibitem{anil2004}
+Anil K. Jain, Arun Ross and Salil Prabhakar.\\
+\textit{An introduction to biometric recognition}.\\
+IEEE Transactions on Circuits and Systems for Video Technology, Volume: 14, Issue: 1, January 2004.
 \end{thebibliography}
 
 \end{document}
