changes to unifrm graphs + discrete and continuous credential

--- a/Integrating_continuous_credentials.tex
+++ b/Integrating_continuous_credentials.tex
@@ -390,7 +390,51 @@ b. \textbf{OR} Require at least one credential to be satisfied. For success, we 
 P_{\text{Success}}(w^{\text{OR}}) = \mathrm{P_{\text{safe1}}} \cdot \mathrm{P_{\text{safe2}}} + \mathrm{P_{\text{safe1}}} \cdot \mathrm{P_{\text{loss2}}} + \mathrm{P_{\text{safe2}}} \cdot \mathrm{P_{\text{loss1}}}
 \]
 
-Our analysis 
+For each wallet type, we analyzed the case of two independently and identically distributed credentials in 2 cases:
+
+a. A mechanism comprised of 1 discrete credential and 1 continuous credetial.
+
+b. A mechanism comprised of 2 continuously distributed credentials
+
+We derived the optimal operating point for both \textbf{AND} and \textbf{OR} wallets by maximizing the respective success probabilities with respect to the thresholds of each credential.
+\subsection{AND Wallet}
+We started by analyzing the case of a wallet comprised of 1 discrete credential and 1 continuous credential. We defined the discrete credential with a constant value of each one of the probabilities' states as: $ k_1, k_2,k_3, k_4 $ corrsponding respectively to each one of the states: ${\text{safe}}$, ${\text{loss}}$, ${\text{leak}}$ and ${\text{theft}}$. The continuous credential is defined by its PDFs for the user and the attacker, $P_U$ and $P_A$ respectively. Denote $s_i$ the state of credential $i$, we derived the probability of the credentails and the probability of success for the \textbf{AND} wallet as follows:
+
+\[
+\begin{aligned}
+{P_{\text{safe1}}} &= 1 - \text{FAR}(T) - \text{FRR}(T) + \text{FAR}(T)\,\text{FRR}(T),\\
+{P_{\text{safe2}}} &= k_1, \\
+{P_{\text{leak1}}} &= \text{FAR}(T)\,\bigl(1 - \text{FRR}(T)\bigr), \\
+{P_{\text{leak2}}} &= k_3. 
+\end{aligned}
+\]
+
+
+\[
+P_{\text{success}}(T) =
+\begin{cases}
+k_1, 
+& T \le a_1, \\[10pt]
+
+(k_1 + k_3) - k_3\,\dfrac{a_2 - T}{a_2 - a_1}, 
+& a_1 < T \le u_1, \\[14pt]
+
+\dfrac{u_2 - T}{u_2 - u_1}
+\left[
+(k_1 + k_3)
+- k_3\,\dfrac{a_2 - T}{a_2 - a_1}
+\right],
+& u_1 < T \le a_2, \\[16pt]
+
+\dfrac{u_2 - T}{u_2 - u_1}(k_1 + k_3), 
+& a_2 < T \le u_2, \\[12pt]
+
+0, 
+& T > u_2.
+\end{cases}
+\]
+
+
 
 \section{Model}
 \subsection{Mechanism Success 2 credentials}
