uniform and discrete integration

--- a/Integrating_continuous_credentials.tex
+++ b/Integrating_continuous_credentials.tex
@@ -398,11 +398,11 @@ b. A mechanism comprised of 2 continuously distributed credentials
 
 We derived the optimal operating point for both \textbf{AND} and \textbf{OR} wallets by maximizing the respective success probabilities with respect to the thresholds of each credential.
 \subsection{AND Wallet}
-We started by analyzing the case of a wallet comprised of 1 discrete credential and 1 continuous credential. We defined the discrete credential with a constant value of each one of the probabilities' states as: $ k_1, k_2,k_3, k_4 $ corrsponding respectively to each one of the states: ${\text{safe}}$, ${\text{loss}}$, ${\text{leak}}$ and ${\text{theft}}$. The continuous credential is defined by its PDFs for the user and the attacker, $P_U$ and $P_A$ respectively. Denote $s_i$ the state of credential $i$, we derived the probability of the credentails and the probability of success for the \textbf{AND} wallet as follows:
+We started by analyzing the case of a wallet comprised of 1 discrete credential and 1 continuous credential. We defined the discrete credential with a constant value of each one of the probabilities' states as: $ k_1, k_2,k_3, k_4 $ corrsponding respectively to each one of the states: ${\text{safe}}$, ${\text{loss}}$, ${\text{leak}}$ and ${\text{theft}}$. The continuous credential is defined by its PDFs for the user and the attacker, $P_U$ and $P_A$ respectively. We firstly analyzed the uniformly distributed credential between the bounds of $u_1$,$u_2$ corrsponding to the user distribution and $a_1$,$a_2$ corresponds to the attacker, similarly to section 3.2.1. Denote $s_i$ the state of credential $i\in(Continuous,Discrete)$, we derived the probability of the credentails and the probability of success for the \textbf{AND} wallet as follows:
 
 \[
 \begin{aligned}
-{P_{\text{safe1}}} &= 1 - \text{FAR}(T) - \text{FRR}(T) + \text{FAR}(T)\,\text{FRR}(T),\\
+{P_{\text{safe1}}} &= 1 - \text{FAR}(T) - \text{FRR}(T) + \text{FAR}(T) \cdot \text{FRR}(T),\\
 {P_{\text{safe2}}} &= k_1, \\
 {P_{\text{leak1}}} &= \text{FAR}(T)\,\bigl(1 - \text{FRR}(T)\bigr), \\
 {P_{\text{leak2}}} &= k_3. 
@@ -434,6 +434,19 @@ k_1,
 \end{cases}
 \]
 
+For every interval, we found the optimum point by diffrentiate $P_{\text{success}}(T)$. We identified the global maximum, which corresponds to the optimal threshold $T_{\text{opt}}$ by comparing the stationary values obtained in all valid regions.
+
+For the first interval $T \le a_1$ , $P_{\text{success}}(T) = k_1$ is constant thus no maximum point.
+In the second interval $a_1 < T \le u_1$ , we can see that $P_{\text{success}}(T)$ is a strictly increasing function, as its derivative is a constant positive value. Thus the maximum point is at $T_{\text{opt2}} = u_1$.
+In the third interval $u_1 < T \le a_2$ , we differentiate $P_{\text{success}}(T)$ and find the critical point:
+\[
+T_{\text{opt3}} = \frac{a_1 (k_1 + k_3) \;-\; a_2 k_1 \;+\; k_3 u_2}{2 k_3}
+\]
+In the fourth interval $a_2 < T \le u_2$ , we can see that $P_{\text{success}}(T)$ is a strictly decreasing function, as its derivative is a constant negative value. Thus the maximum point is at $T_{\text{opt4}} = a_2$.
+
+The optimal operating point is obtained in the third interval, where both distributions overlap and the success function achieves its interior maximum:
+\[P_{\text{success}}(T_{\text{opt}}) = \frac{\left(-a_1 (k_1 + k_3) + a_2 k_1 + k_3 u_2\right)^2}{4 k_3 (a_2 - a_1)(u_2 - u_1)}
+\] 
 
 
 \section{Model}
